Changes
=======

2013-10-05
----------

- Update to Python 2.6.9rc1.
  [fschulze]

- Added `python34.cfg` for Python 3.4.0a3. Only the build part is active,
  virtualenv 1.10.1 doesn't work with Python 3.4 yet.
  [fschulze]


2013-10-02
----------

- Use collective.recipe.cmmi which allows multiple patches.
  [fschulze]


2013-10-01
----------

- Install PIL in the built python instead of the virtualenv, so any new
  virtualenv created with --system-site-packages has access to it.
  [fschulze]


2013-08-31
----------

- Update to PyPy 2.1.
  [fschulze]

- Added pypy3.cfg.
  [fschulze]


2013-08-26
----------

- For Python 2.7, set LD_RUN_PATH and C_INCLUDE_PATH prior to
  easy_install of Pillow in virtualenv; recent Pillow build may obey
  this to link against local zlib and libjpeg on some platforms
  (notably, Linux ld.so), using "rpath" hard-coded in built _imaging.so.
  [seanupton]
- Include --always-unzip flag for easy_install of Pillow to avoid
  installation in ~/.python-eggs directory.
  [seanupton]


2013-08-14
----------

- Update Virtualenv to 1.10.1 for Python > 2.5 and Virtualenv to 1.9.1 for
  Python 2.5 (last compatible version).
  [davidjb]
- Fix issue compiling Python 2.5 on x86_64 systems.
  [davidjb]
- Fix issue compiling Python 2.5 for Subversion >= 1.7.
  [davidjb]
- Fix issue compiling Python 2.5 if sqlite can't be found.
  [davidjb]

2013-07-16
----------

- Update to PyPy 2.0.2.
  [hannosch]

2013-05-16
----------

- Update to PyPy 2.0.
  [hannosch]

- Update to Python 2.7.5, 3.2.5 and 3.3.2.
  [hannosch]

2013-04-11
----------

- Update to Python 2.7.4, 3.2.4 and 3.3.1.
  [hannosch]

2013-04-08
----------

- Update to PyPy 2.0-beta2.
  [fschulze]

2013-03-29
----------

- Update virtualenv to 1.9.1.
  [fschulze]

2013-03-26
----------

- Update to Python 2.7.4rc1, 3.2.4rc1 and 3.3.1rc1.
  [hannosch]

2013-03-16
----------

- Pin down Pillow to 1.x for python 2.4 and 2.5.
  Pillow 2.x supports only python >= 2.6
  [jone]

2013-02-26